# meson-jll

./: .gitignore  CONTRIBUTING.md  Cargo.toml  README.md  guide.md
.github/workflows/: ci.yml  docs.yml  release.yml
docs/: examples.md  index.md  internals.md  lockfile.md
src/: cache.rs  error.rs  git.rs  install.rs  lib.rs  lock.rs  main.rs  progress.rs  registry.rs  resolve.rs  source.rs  status.rs  version.rs
src/generate/: context.rs  mod.rs
src/jll/: artifacts.rs  mod.rs  project.rs  triplet.rs  wrappers.rs
templates/: binary_wrap.jinja  options.jinja  selector_overlay.jinja  selector_wrap.jinja  triplet_overlay.jinja
tests/: e2e_meson.rs  e2e_real_jll.rs  generate.rs
tests/common/: mod.rs
tests/fixtures/example_jll/: Artifacts.toml  Project.toml
tests/fixtures/example_jll/src/wrappers/: aarch64-apple-darwin.jl  aarch64-darwin.jl  x86_64-linux-gnu.jl
tests/projects/highs_wheel/: _demo.c  meson.build  pyproject.toml
tests/projects/highs_wheel/demo_ext/: __init__.py
tests/projects/suitesparse/: demo.c  meson.build
