[package]
name = "meson-jll"
version = "0.0.1"
edition = "2021"
description = "Generate Meson wraps from Julia JLL packages"
license = "LICENSE.md"
repository = "https://github.com/nardi/meson-jll"

[[bin]]
name = "meson-jll"
path = "src/main.rs"

[lib]
name = "meson_jll"
path = "src/lib.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
nom = "7"
askama = "0.12"
ureq = "2"
sha2 = "0.10"
thiserror = "1"
anyhow = "1"

[dev-dependencies]
tempfile = "3"
