[package]
name = "meson-jll"
version = "0.0.3"
edition = "2021"
description = "Generate Meson wraps from Julia JLL packages"
# The Hippocratic License is not an SPDX-listed license, so it is declared
# through license-file rather than the SPDX-expecting `license` field, which
# crates.io rejects for a non-standard identifier.
license-file = "LICENSE.md"
repository = "https://github.com/nardi/meson-jll"
# test_projects/ holds hand-driven local scratch projects (each with its own
# build trees and downloaded tarballs), never part of the library or binary,
# so it is kept out of the published crate.
exclude = ["/test_projects", "*.whl", "*.zip"]

[[bin]]
name = "meson-jll"
path = "src/main.rs"

[lib]
name = "meson_jll"
path = "src/lib.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
nom = "7"
askama = "0.12"
ureq = "2"
sha2 = "0.10"
thiserror = "1"
anyhow = "1"
dirs = "5"
indicatif = "0.17"
console = "0.15"
tar = "0.4"
flate2 = "1"

[dev-dependencies]
tempfile = "3"
